FIX: Correct width of login box elements, display issue on Safari. [t28231]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@17310 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1406,7 +1406,7 @@ a.FeaturedSimpleLink:hover, a.FeaturedSimpleLink:active  {
 }
 
 #login_box #user_local_tz {
-    width: 273px;
+    width: 272px;
 }
 
 #login_box .Question input[type=text],
